# email_sub

./: Cargo.toml  configuration.yaml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
src/: db_connection.rs  main.rs  startup.rs
tests/: health_check.rs
