[package]
name = "email_sub"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.11"
serde = { version = "1", features = ["derive"]}
edgedb-tokio = "0.3.0"
edgedb-derive = "0.4.0"
config = "0.11"
lazy_static = "1.4.0"
